Revision history for perl distribution Convos

3.08 Not Released
 - Removed support for underscore markdown formatting #438

3.07 2020-01-27T10:00:00+0900
 - Fix not nuking files on disk if no more disk space
 - Add visible tooltips #436
 - Will try to rotate uploaded JPEG images

3.06 2020-01-09T14:08:36+0900
 - Fix link color inside pseudo form elements
 - Fix not focusing the last element in the sidebar
 - Fix timestamp color for the Nord theme

3.05 2020-01-07T11:32:36+0900
 - Fix autocomplete text color
 - Fix not focusing two nav items after going back/forward in history after searching
 - Fix changing focus in navbar when the URL changes
 - Fix channel name not getting collapsed in heading
 - Render readonly topic as html in settings and made the topic clickable as well
 - Better transition between different loading states
 - Bumped LinkEmbedder to 1.11

3.04 2020-01-06T22:07:36+0900
 - Add custom title for all pages
 - Fix bugs in Dark and Nord theme
 - Fix showing <SidebarChat/> only on pages that wants it
 - Fix clearning activeMenu when changing page
 - Fix not reloading User from <ConnectionSettings/>
 - Fix not notifying the user when the user has already accepted notifications

3.03 2020-01-06T14:21:36+0900
 - Fix serving uploaded files with correct Content-Type #435
 - Fix offset for hamburger menu
 - Fix not duplicating notification messages
 - Designed new login/register screen, where they are on the same page
 - Renamed "Login" and "Register" to "Sign in" and "Sign up"
 - Will display connection name in sidebar
 - Changed Dark theme: Less dark inputs and darker buttons
 - Changed Nord theme: Made the inputs visible on blue background

3.02 2019-12-29T11:02:36+0900
 - Fix getting topic on connect #433
 - Fix clicking on dropdown options #434
 - Fix "/ison" without arguments
 - Add clearing of the password fields to prevent browser autocomplete

3.01 2019-12-28T13:30:36+0900
 - Fix not send command as message by acciden #428