@@ -1,7 +1,3 @@
-<script context="module">
-let nAriaLabels = 0;
-</script>
-
 <script>
 import {gotoUrl, currentUrl} from '../store/router';
 
@@ -11,7 +7,6 @@ let el;
 
 export {className as class};
 export let href = '/';
-export let label = '';
 export let native = false;
 export let replace = false;
 export let style = '';
@@ -19,7 +14,6 @@ export let style = '';
 export const focus = () => el.focus();
 
 $: absoluteHref = href.slice(0, 1) == '/' ? currentUrl.base + href : href;
-$: ariaLabelledBy = label.length && 'link_label_' + (++nAriaLabels);
 $: hasPath = $currentUrl == absoluteHref.replace(/(#|\?).*/, '');
 
 function onClick(event) {
@@ -28,7 +22,4 @@ function onClick(event) {
 }
 </script>
 
-<a href="{absoluteHref}" on:click="{onClick}" class="{className}" class:has-path="{hasPath}" style="{style}" aria-labelledby="{ariaLabelledBy}" bind:this="{el}"><slot/></a>
-{#if ariaLabelledBy}
-<div role="tooltip" id="{ariaLabelledBy}">{label}</div>
-{/if}
+<a href="{absoluteHref}" on:click="{onClick}" class="{className}" class:has-path="{hasPath}" style="{style}" bind:this="{el}"><slot/></a>
